[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/dialoguebox.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/dialogue/int/Int-3.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/dialogue/int/Int-4.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/dialogue/ath/Ath-4.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/dialogue/ath/Ath-5.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/dialogue/def/Def-3.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/dialogue/int/Int-6.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/dialogue/ath/Ath-7.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/dialogue/def/Def-4.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/dialogue/ath/Ath-6.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/dialogue/int/Int-2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/dialogue/def/Def-5.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/dialogue/def/Def-1.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/dialogue/def/Def-2.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/dialogue/ath/Ath-2.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/dialogue/ath/Ath-3.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/dialogue/ath/Ath-1.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/dialogue/int/Int-1.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/dialogue/int/Int-5.png" type="Texture" id=19]
[ext_resource path="res://scripts/chap_2_prologue.gd" type="Script" id=20]
[ext_resource path="res://assets/Font/subtitle.tres" type="DynamicFont" id=21]
[ext_resource path="res://scenes/TransitionScreen1.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/sfx/menu-select-button-182476.mp3" type="AudioStream" id=26]
[ext_resource path="res://assets/sprites/choice-box.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/choice-box-hover.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "ath-angry",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "ath-annoyed",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ath-confused",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "ath-happy",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "ath-laugh",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "ath-neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "ath-sad",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "def-happy",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "def-neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "def-sad",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "def-shocked",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "def-smile",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "int-angry",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "int-annoyed",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "int-neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "int-sad",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "int-sigh",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "int-smile",
"speed": 5.0
} ]

[node name="Prologue" type="Node2D"]
script = ExtResource( 20 )
next_scene = "res://scenes/chapter-2/bus-stop.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="dialoguebox" parent="." instance=ExtResource( 1 )]

[node name="animate" type="AnimatedSprite" parent="."]
position = Vector2( 946, 1110 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "int-sigh"

[node name="up" type="TextureButton" parent="." groups=["button"]]
visible = false
margin_left = 395.0
margin_top = 383.0
margin_right = 1265.0
margin_bottom = 535.0
rect_min_size = Vector2( 2, 0 )
rect_scale = Vector2( 1.3, 1.3 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 28 )
texture_focused = ExtResource( 28 )

[node name="Label" type="Label" parent="up"]
margin_left = 2.0
margin_top = -42.0
margin_right = 868.0
margin_bottom = 99.0
custom_constants/line_spacing = -16
custom_fonts/font = ExtResource( 21 )
text = "But, I'm tired...Let me rest here for a while."
align = 1
valign = 1

[node name="down" type="TextureButton" parent="." groups=["button"]]
visible = false
margin_left = 395.0
margin_top = 493.0
margin_right = 1265.0
margin_bottom = 645.0
rect_scale = Vector2( 1.3, 1.3 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 28 )
texture_focused = ExtResource( 28 )

[node name="Label" type="Label" parent="down"]
margin_left = 0.769226
margin_top = -42.3077
margin_right = 868.769
margin_bottom = 98.6923
custom_constants/line_spacing = -24
custom_fonts/font = ExtResource( 21 )
text = "Enough explaining, let's just go."
align = 1
valign = 1

[node name="TransitionScreen1" parent="." instance=ExtResource( 25 )]
visible = false

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
bus = "SFX"

[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="down" to="." method="_on_down_pressed"]
